--- a/Event_Management_System/Views/EventLocationMaster/Index.cshtml
+++ b/Event_Management_System/Views/EventLocationMaster/Index.cshtml
@@ -106,6 +106,7 @@
                     @foreach (var seat in row.Value)
                     {
                         <div class="seat" data-seat-id="@seat.Label">
+                            @*<div class="seat" id="LblRows1" data-hidden-value="888">A1</div>*@
                             @seat.Label
                         </div>
                     }
