Code Update by gajendra v2

--- a/Event_Management_System/Views/BookingInfo/Add.cshtml
+++ b/Event_Management_System/Views/BookingInfo/Add.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Event_Management_System.Models.BookingInfoVM
 @{
     ViewBag.Title = "Add";
+    Layout = "~/Views/Shared/_Mst.cshtml";
 }
 
 <h2>Add Book Info</h2>
