--- a/Event_Management_System/Views/BookingInfo/Index.cshtml
+++ b/Event_Management_System/Views/BookingInfo/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Mst.cshtml";
     //var viewData = ViewBag.BookingInfo as IEnumerable<Event_Management_System.Models.BookingInfoVM>;
 }
 
