--- a/Event_Management_System/Views/Branch/Index.cshtml
+++ b/Event_Management_System/Views/Branch/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<Event_Management_System.Models.Branch_Tbl>
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Mst.cshtml";
 }
 
 
