--- a/Event_Management_System/Views/Event/Edit.cshtml
+++ b/Event_Management_System/Views/Event/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Event_Management_System.Models.EventVM
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_Mst.cshtml";
 }
 
 <h2>Update Event</h2>
