--- a/Event_Management_System/Views/Semester/Edit.cshtml
+++ b/Event_Management_System/Views/Semester/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Event_Management_System.Models.Semester_Tbl
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_Mst.cshtml";
 }
 
 <h2>Edit</h2>
