--- a/Event_Management_System/Views/Semester/Index.cshtml
+++ b/Event_Management_System/Views/Semester/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<Event_Management_System.Models.Semester_Tbl> 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Mst.cshtml";
 }
 
 <div class="row mt-5">
