--- a/Event_Management_System/Views/Branch/Add.cshtml
+++ b/Event_Management_System/Views/Branch/Add.cshtml
@@ -2,6 +2,7 @@
 @model Event_Management_System.Models.Branch_Tbl
 @{
     ViewBag.Title = "Add";
+    Layout = "~/Views/Shared/_Mst.cshtml";
 }
 
 <h2>Add Branch</h2>
