--- a/Event_Management_System/Views/College/Index.cshtml
+++ b/Event_Management_System/Views/College/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Mst.cshtml";
 }
 
 <div class="row mt-5">
@@ -10,7 +11,7 @@
         <h3>College Details</h3>
     </div>
     <div class="col-md-6 text-end">
-        <a href="/College/Add" class="btn btn-primary ">Add New</a>
+        @*<a href="/College/Add" class="btn btn-primary ">Add New</a>*@
     </div>
 </div>
 
@@ -42,7 +43,7 @@
             <td>@Model[i].Created_by</td>*@
             <td>
                 <a href="~/College/Edit?CollegeId=@Model[i].College_id">Edit</a>
-                <a href="~/College/Remove?CollegeId=@Model[i].College_id">Delete</a>
+                @*<a href="~/College/Remove?CollegeId=@Model[i].College_id">Delete</a>*@
                 @*? means we are passing some id*@
             </td>
         </tr>
