--- a/Event_Management_System/Views/Event/Add.cshtml
+++ b/Event_Management_System/Views/Event/Add.cshtml
@@ -1,7 +1,15 @@
 ﻿@model Event_Management_System.Models.EventVM
 @{
     ViewBag.Title = "Add";
+    Layout = "~/Views/Shared/_Mst.cshtml";
+    var dropdownList = new List<SelectListItem>
+{
+        new SelectListItem { Value = "0", Text = "<--Select Option-->" },
+        new SelectListItem { Value = "AM", Text = "AM" },
+        new SelectListItem { Value = "PM", Text = "PM" }
+    };
 }
+
 
 <h2>Add Event</h2>
 
@@ -10,11 +18,11 @@
     <div class="row">
         <div class="col-md-6">
             <label>Event Name</label>
-            @Html.DropDownListFor(x => x.Event_Id, ViewBag.EvtMstData as SelectList,"--Select Event---" ,new { @class = "form-control", @type = "date" })
+            @Html.DropDownListFor(x => x.Event_Id, ViewBag.EvtMstData as SelectList, "--Select Event---", new { @class = "form-control", @type = "date" })
         </div>
         <div class="col-md-6">
             <label>Event Location</label>
-            @Html.DropDownListFor(x => x.EventLoc_ID, ViewBag.LocData as SelectList,"--Select Location--" ,new { @class = "form-control", @type = "date" })
+            @Html.DropDownListFor(x => x.EventLoc_ID, ViewBag.LocData as SelectList, "--Select Location--", new { @class = "form-control", @type = "date" })
         </div>
     </div>
 
@@ -32,12 +40,17 @@
     <div class="row">
         <div class="col-md-6">
             <label>Event From Time</label>
-            @Html.TextBoxFor(x => x.Event_FromTime, new { @class = "form-control" })
+
+            @*@Html.TextBoxFor(x => x.Event_FromDate, new { @class = "form-control", @type = "time" })*@
+            @Html.TextBoxFor(x => x.Event_FromTime, new { @class = "form-control", id = "Event_FromTime" })
+
         </div>
+
         <div class="col-md-6">
             <label>Event To Time</label>
-            @Html.TextBoxFor(x => x.Event_ToTime, new { @class = "form-control" })
+            @Html.TextBoxFor(x => x.Event_ToTime, new { @class = "form-control", id = "Event_ToTime" })
         </div>
+      
     </div>
 
     <div class="row">
@@ -51,16 +64,16 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-6">
-            <label>Price</label>
-            @Html.TextBoxFor(x => x.Price, new { @class = "form-control", @type = "number" })
-        </div>
-        @*<div class="col-md-6">
-                <label>Created Date</label>
-                @Html.TextBoxFor(x => x.Created_Date, new { @class = "form-control", @type = "date" })
-            </div>*@
-    </div>
+    @*<div class="row">
+            <div class="col-md-6">
+                <label>Price</label>
+                @Html.TextBoxFor(x => x.Price, new { @class = "form-control", @type = "number" })
+            </div>
+            <div class="col-md-6">
+                    <label>Created Date</label>
+                    @Html.TextBoxFor(x => x.Created_Date, new { @class = "form-control", @type = "date" })
+                </div>
+        </div>*@
 
     <div class="row">
         @*<div class="col-md-7">
@@ -73,4 +86,30 @@
         </div>
     </div>
 }
+<!-- Include Flatpickr CSS (for styling) -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
+<!-- Include jQuery (optional, but useful if you're using jQuery) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Include Flatpickr JS (for functionality) -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function () {
+        flatpickr("#Event_FromTime", {
+            enableTime: true,
+            noCalendar: true,
+            dateFormat: "h:i K", // This will format the time as 12-hour (with AM/PM)
+            time_24hr: false // This ensures the time is in 12-hour format
+        });
+    });</script>
+
+<script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function () {
+        flatpickr("#Event_ToTime", {
+            enableTime: true,
+            noCalendar: true,
+            dateFormat: "h:i K", // This will format the time as 12-hour (with AM/PM)
+            time_24hr: false // This ensures the time is in 12-hour format
+        });
+    });</script>
