--- a/Event_Management_System/Views/EventLocationMaster/Add.cshtml
+++ b/Event_Management_System/Views/EventLocationMaster/Add.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Event_Management_System.Models.EvtLocationCollegeVM
 @{
     ViewBag.Title = "Add";
+    Layout = "~/Views/Shared/_Mst.cshtml";
     // Define your static values
     var dropdownList = new List<SelectListItem>
 {
@@ -52,7 +53,7 @@
     <div class="row">
         <div class="col-md-6">
             <label>College Name</label>
-            @Html.DropDownListFor(x => x.College_id, ViewBag.CollegeData as SelectList, "--Select College--", new { @class = "form-control", @id = "ddlCollege" })
+            @Html.DropDownListFor(x => x.College_id, ViewBag.CollegeData as SelectList,  new { @class = "form-control", @id = "ddlCollege" })
         </div>
         <div class="col-md-6">
             <label>Location</label>
