--- a/Event_Management_System/Views/Login/Index.cshtml
+++ b/Event_Management_System/Views/Login/Index.cshtml
@@ -32,7 +32,7 @@
 
 
         .login_form {
-            padding-top: 40px;
+            padding-top: 10px;
         }
     </style>
 </head>
@@ -44,10 +44,10 @@
 
                 <div class="col-md-5 company__info text-white d-flex flex-column justify-content-center align-items-center bg-primary">
                     <h3 class="mb-4">EMS</h3>
-                    <img alt="EMS" src="~/Content/Login/loboEMS.jpeg" style="width: 200px; height: 150px;" />
+                    <img alt="EMS" src="~/Content/Login/EMS-logo.jpeg" style="width: 200px; height: 150px;" />
                     <h4 class="company_title mt-3">Event Management System</h4>
                 </div>
-
+               
                 <div class="col-md-7 col-xs-12 col-sm-12 login_form">
                     <div class="container-fluid">
                         <div class="row">
@@ -58,7 +58,13 @@
                             {
                                 @Html.AntiForgeryToken()
 
-                                <div class="form-horizontal">
+                            <div class="form-horizontal">
+                                <div class="form-group">
+                                    <div class="col-md-12">
+                                        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label" }, labelText: "Select Type")
+                                        @Html.DropDownList("Name", (SelectList)ViewBag.catMsg, "Select Type", htmlAttributes: new { @class = "form-control", @id = "ddlcategory" })
+                                    </div>
+                                    </div>
                                     <div class="form-group">
                                         <div class="col-md-12">
                                             @Html.EditorFor(model => model.Mobile, new { htmlAttributes = new { @class = "form-control", placeholder = "Enter your mobile number" } })
@@ -74,8 +80,12 @@
                                 </div>
                             }
                         </div>
+                        <div class="row">
+                            @Html.ActionLink("New User", "Create", "User", new { area = "" }, new { @class = "nav-link" })
+                            
+                        </div>
+                        </div>
                     </div>
-                </div>
             </div>
         </div>
         <!-- Footer -->
