--- a/Event_Management_System/Views/Seat/Add.cshtml
+++ b/Event_Management_System/Views/Seat/Add.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Event_Management_System.Models.SeatEvtLocVM
 @{
     ViewBag.Title = "Add";
+    Layout = "~/Views/Shared/_Mst.cshtml";
 }
 
 <h2>Add Seat</h2>
