--- a/Event_Management_System/Views/Year/Add.cshtml
+++ b/Event_Management_System/Views/Year/Add.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Add";
+    Layout = "~/Views/Shared/_Mst.cshtml";
 }
 <div class="row mt-5">
     <div class="col-md-6 ">
